--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="media/img/icons/icon.png" type="image/x-icon">
     <script src="script.js"></script>
-    <title>Принт Бюро - Товары</title>
+    <title>Принт Бюро - Главная</title>
 </head>
 <body>
     <div class="theTopMostPanel">
@@ -18,8 +18,8 @@
         <div class="navPanel">
             <div class="navLeft">
                 <ul>
-                    <li><a href="main.html">Главная</a></li>
-                    <li><a href="index.html">► Товары ◄</a></li>
+                    <li><a href="main.html">► Главная ◄</a></li>
+                    <li><a href="index.html">Товары</a></li>
                     <li><a href="contacts.html">Контакты</a></li>
                 </ul>
             </div>
@@ -41,16 +41,16 @@
         <div class="mainBlock">
             <div class="content">
                 <div class="topContent">
-                    <h1>Товары</h1>
+                    <h1>Главная</h1>
                 </div>
                 <div class="midContent">
-                    
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim doloribus libero quos quis labore, eum vel nam maxime aspernatur natus ratione, doloremque laborum. Vel, deserunt esse tempore temporibus voluptas accusamus.</p>
                 </div>
-                <div class="botContent">               
+                <div class="botContent">
+                    
                 </div>
-            </div>       
-        </div>       
+            </div>
+        </div>
     </div>
 
     <div class="footer">
