--- a/registration.html
+++ b/registration.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="authPage.css">
     <link rel="shortcut icon" href="media/img/icons/icon.png" type="image/x-icon">
     <script src="script.js"></script>
-    <title>Принт Бюро - Товары</title>
+    <title>Принт Бюро - Регистрация</title>
 </head>
 <body>
     <div class="theTopMostPanel">
@@ -19,7 +20,7 @@
             <div class="navLeft">
                 <ul>
                     <li><a href="main.html">Главная</a></li>
-                    <li><a href="index.html">► Товары ◄</a></li>
+                    <li><a href="index.html">Товары</a></li>
                     <li><a href="contacts.html">Контакты</a></li>
                 </ul>
             </div>
@@ -38,19 +39,33 @@
     </div>
 
     <div class="main">
-        <div class="mainBlock">
+        <div class="regBlock">
             <div class="content">
                 <div class="topContent">
-                    <h1>Товары</h1>
+                    <h1>Регистрация</h1>
                 </div>
                 <div class="midContent">
-                    
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim doloribus libero quos quis labore, eum vel nam maxime aspernatur natus ratione, doloremque laborum. Vel, deserunt esse tempore temporibus voluptas accusamus.</p>
+                    <form action="#">
+                        <input type="text" placeholder="Имя">
+                        <!-- <input type="text" placeholder="Фамилия"> -->
+                        <input type="text" placeholder="Почта">
+                        <input type="password" placeholder="Пароль">
+                        <input type="password" placeholder="Повторите пароль">
+                    </form>
                 </div>
-                <div class="botContent">               
+                <div class="botContent">
+                    <div class="terms">
+                        <input type="checkbox" id="checkbox">
+                        <label for="checkbox">Нажимая "Регистрация", Вы соглашаетесь с 
+                            <a href="#">правилами по использованию сервиса</a></label>
+                    </div>
+                    <button>Регистрация</button>
+                    <div class="member">
+                        Есть аккаунт? <a href="login.html">Войти</a>
+                    </div>
                 </div>
-            </div>       
-        </div>       
+            </div>
+        </div>
     </div>
 
     <div class="footer">
