--- a/login.html
+++ b/login.html
@@ -43,15 +43,18 @@
                 <div class="topContent">
                     <h1>Вход</h1>
                 </div>
-                <div class="midContent">
+                <div class="midContent" id="костыль">
                     <form action="#">
-                        <input type="text" placeholder="Имя или почта">
+                        <input type="text" placeholder="Почта">
                         <!-- <input type="text" placeholder="Фамилия"> -->
                         <input type="password" placeholder="Пароль">
                     </form>
                 </div>
                 <div class="botContent">
-                    <button class="костыль">Войти</button>
+                    <div class="recover">
+                        <a href="#">Забыли пароль?</a>
+                    </div>
+                    <button>Войти</button>
                     <div class="member">
                         Не зарегистрированы? <a href="registration.html">Регистрация</a>
                     </div>
@@ -66,11 +69,5 @@
             <p>2022</p>
         </div>
     </div>
-    <!-- <div class="fullscreen-bg">
-        <video playsinline="" autoplay="" muted="" loop="" poster="media/img/bg.jpg">
-            <source src="media/vid/bg.webm" type="video/webm">
-            <source src="media/vid/bg.mp4" type="video/mp4">
-    </video>
-    </div> -->
 </body>
 </html>
