--- a/main.html
+++ b/main.html
@@ -44,7 +44,11 @@
                     <h1>Главная</h1>
                 </div>
                 <div class="midContent">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim doloribus libero quos quis labore, eum vel nam maxime aspernatur natus ratione, doloremque laborum. Vel, deserunt esse tempore temporibus voluptas accusamus.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi beatae dolorem, reiciendis maiores dolorum exercitationem perspiciatis possimus quos illum facere, ullam ipsa obcaecati doloremque culpa autem nulla omnis eaque iure.
+                    Quo mollitia at sit id laboriosam, maiores sapiente debitis consequuntur fuga tenetur sed libero ab qui, consectetur obcaecati eius molestias magni facere hic inventore quae possimus laudantium doloremque? In, quasi.
+                    Fugit eveniet labore reprehenderit esse, facilis sunt cupiditate adipisci animi velit porro optio sit exercitationem! Tempore laboriosam consequatur minima porro vitae, explicabo quisquam asperiores eveniet excepturi temporibus voluptatum esse voluptatibus.
+                    Tempore nihil eum quisquam ad unde sit ut voluptatum aspernatur blanditiis iusto itaque quasi iste culpa dolor repellendus minus quaerat vel aperiam, quidem exercitationem reiciendis dolores excepturi autem impedit. Inventore.
+                    Quibusdam dolorum, quia, ipsam porro illo dignissimos tempora doloremque magni, magnam sed natus quidem! Impedit, amet dolores odio accusantium totam delectus consequuntur illum iusto non facilis. Quidem minima debitis quia.</p>
                 </div>
                 <div class="botContent">
                     
@@ -59,11 +63,5 @@
             <p>2022</p>
         </div>
     </div>
-    <!-- <div class="fullscreen-bg">
-        <video playsinline="" autoplay="" muted="" loop="" poster="media/img/bg.jpg">
-            <source src="media/vid/bg.webm" type="video/webm">
-            <source src="media/vid/bg.mp4" type="video/mp4">
-    </video>
-    </div> -->
 </body>
 </html>
