--- a/main.html
+++ b/main.html
@@ -5,15 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="carousel.css">
     <link rel="shortcut icon" href="media/img/icons/icon.png" type="image/x-icon">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <title>Принт Бюро - Главная</title>
 </head>
 <body>
-    <div class="theTopMostPanel">
-        
-    </div>
-
     <div class="topPanel">
         <div class="navPanel">
             <div class="navLeft">
@@ -44,14 +41,47 @@
                     <h1>Главная</h1>
                 </div>
                 <div class="midContent">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi beatae dolorem, reiciendis maiores dolorum exercitationem perspiciatis possimus quos illum facere, ullam ipsa obcaecati doloremque culpa autem nulla omnis eaque iure.
-                    Quo mollitia at sit id laboriosam, maiores sapiente debitis consequuntur fuga tenetur sed libero ab qui, consectetur obcaecati eius molestias magni facere hic inventore quae possimus laudantium doloremque? In, quasi.
-                    Fugit eveniet labore reprehenderit esse, facilis sunt cupiditate adipisci animi velit porro optio sit exercitationem! Tempore laboriosam consequatur minima porro vitae, explicabo quisquam asperiores eveniet excepturi temporibus voluptatum esse voluptatibus.
-                    Tempore nihil eum quisquam ad unde sit ut voluptatum aspernatur blanditiis iusto itaque quasi iste culpa dolor repellendus minus quaerat vel aperiam, quidem exercitationem reiciendis dolores excepturi autem impedit. Inventore.
-                    Quibusdam dolorum, quia, ipsam porro illo dignissimos tempora doloremque magni, magnam sed natus quidem! Impedit, amet dolores odio accusantium totam delectus consequuntur illum iusto non facilis. Quidem minima debitis quia.</p>
+                    <section aria-label="Newest Photos">
+                        <div class="carousel" data-carousel>
+                          <button class="carousel-button prev" data-carousel-button="prev">&#5130;</button>
+                          <button class="carousel-button next" data-carousel-button="next">&#5125;</button>
+                          <ul data-slides>
+                            <li class="slide" data-active>
+                                <img src="media/img/mainCarousel/1.jpg" alt="">
+                            </li>
+                            <li class="slide">
+                                <img src="media/img/mainCarousel/2.jpg" alt="">
+                            </li>
+                            <li class="slide">
+                                <img src="media/img/mainCarousel/3.jpg" alt="">
+                            </li>
+                            <li class="slide">
+                                <img src="media/img/mainCarousel/4.jpg" alt="">
+                            </li>
+                            <li class="slide">
+                                <img src="media/img/mainCarousel/5.jpg" alt="">
+                            </li>
+                            <li class="slide">
+                                <img src="media/img/mainCarousel/6.jpg" alt="">
+                            </li>
+                            <li class="slide">
+                                <img src="media/img/mainCarousel/7.jpg" alt="">
+                            </li>
+                            <li class="slide">
+                                <img src="media/img/mainCarousel/8.jpg" alt="">
+                            </li>
+                            <li class="slide">
+                                <img src="media/img/mainCarousel/9.jpg" alt="">
+                            </li>
+                            <li class="slide">
+                                <img src="media/img/mainCarousel/10.jpg" alt="">
+                            </li>
+                          </ul>
+                        </div>
+                      </section>
                 </div>
                 <div class="botContent">
-                    
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia sit nesciunt eos nostrum adipisci repellat omnis soluta illo quibusdam! Nobis exercitationem modi quasi nihil. Accusantium ad consequuntur minima molestias esse.</p>
                 </div>
             </div>
         </div>
