--- a/main.html
+++ b/main.html
@@ -43,8 +43,8 @@
                 <div class="midContent">
                     <section aria-label="Newest Photos">
                         <div class="carousel" data-carousel>
-                          <button class="carousel-button prev" data-carousel-button="prev">&#5130;</button>
-                          <button class="carousel-button next" data-carousel-button="next">&#5125;</button>
+                          <button class="carousel-button prev" data-carousel-button="prev">◄</button>
+                          <button class="carousel-button next" data-carousel-button="next">►</button>
                           <ul data-slides>
                             <li class="slide" data-active>
                                 <img src="media/img/mainCarousel/1.jpg" alt="">
