--- a/contacts.html
+++ b/contacts.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="media/img/icons/icon.png" type="image/x-icon">
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
     <title>Принт Бюро - Контакты</title>
 </head>
 <body>
@@ -42,6 +42,17 @@
             <div class="content">
                 <div class="topContent">
                     <h1>Контакты</h1>
+
+                    <table class="info">                     
+                        <tr>
+                            <td>
+                                <!-- <img src="media/img/icons/place-icon.svg" alt="" width="32"> -->
+                            </td>
+                            <td>
+                                <p>Курск, ул Радищева, д 86</p>
+                            </td>
+                        </tr>
+                    </table>
                 </div>
                 <div class="midContent">
                     <table class="info">
@@ -50,7 +61,7 @@
                                 <img src="media/img/icons/phone-icon.svg" alt="" width="32">
                             </td>
                             <td>
-                                <p>+7 920 267 42 64</p>
+                                <p>  +7 920 267 42 64</p>
                             </td>
                         </tr>
                         
@@ -61,7 +72,7 @@
                                </a>
                             </td>
                             <td>
-                                <p>vk.com/pb_kursk</p>
+                                <p>  vk.com/pb_kursk</p>
                             </td>
                         </tr> 
                         
@@ -70,7 +81,7 @@
                                 <img src="media/img/icons/mail-icon.svg" alt="" width="32">
                             </td>
                             <td>
-                                printbyro@yandex.ru
+                                <p>  printbyro@yandex.ru</p>
                             </td>
                         </tr>
                     </table>
