--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="media/img/icons/icon.png" type="image/x-icon">
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
     <title>Принт Бюро - Товары</title>
 </head>
 <body>
@@ -44,8 +44,105 @@
                     <h1>Товары</h1>
                 </div>
                 <div class="midContent">
-                    
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim doloribus libero quos quis labore, eum vel nam maxime aspernatur natus ratione, doloremque laborum. Vel, deserunt esse tempore temporibus voluptas accusamus.</p>
+                    <div class="productCards">
+                        <a href="">
+                            <div class="card">
+                                <img src="media/img/no-image.png" width="200">
+                                <h4>Кружка</h4>
+                            </div>
+                        </a>
+                        <a href="">
+                            <div class="card">
+                                <img src="media/img/no-image.png" width="200">
+                                <h4>Футболка</h4>
+                            </div>
+                        </a>
+                        <a href="">
+                            <div class="card">
+                                <img src="media/img/no-image.png" width="200">
+                                <h4>8 марта</h4>
+                            </div>
+                        </a>
+                        <a href="">
+                            <div class="card">
+                                <img src="media/img/no-image.png" width="200">
+                                <h4>Тарелки</h4>
+                            </div>
+                        </a>
+                        <a href="">
+                            <div class="card">
+                                <img src="media/img/no-image.png" width="200">
+                                <h4>Металлические бейджи</h4>
+                            </div>
+                        </a>
+                        <a href="">
+                            <div class="card">
+                                <img src="media/img/no-image.png" width="200">
+                                <h4>Печать чертежей</h4>
+                            </div>
+                        </a>
+                        <a href="">
+                            <div class="card">
+                                <img src="media/img/no-image.png" width="200">
+                                <h4>Подушка</h4>
+                            </div>
+                        </a>
+                        <a href="">
+                            <div class="card">
+                                <img src="media/img/no-image.png" width="200">
+                                <h4>Брелок</h4>
+                            </div>
+                        </a>
+                        <a href="">
+                            <div class="card">
+                                <img src="media/img/no-image.png" width="200">
+                                <h4>Кружка</h4>
+                            </div>
+                        </a>
+                        <a href="">
+                            <div class="card">
+                                <img src="media/img/no-image.png" width="200">
+                                <h4>Футболка</h4>
+                            </div>
+                        </a>
+                        <a href="">
+                            <div class="card">
+                                <img src="media/img/no-image.png" width="200">
+                                <h4>8 марта</h4>
+                            </div>
+                        </a>
+                        <a href="">
+                            <div class="card">
+                                <img src="media/img/no-image.png" width="200">
+                                <h4>Тарелки</h4>
+                            </div>
+                        </a>
+                        <a href="">
+                            <div class="card">
+                                <img src="media/img/no-image.png" width="200">
+                                <h4>Металлические бейджи</h4>
+                            </div>
+                        </a>
+                        <a href="">
+                            <div class="card">
+                                <img src="media/img/no-image.png" width="200">
+                                <h4>Печать чертежей</h4>
+                            </div>
+                        </a>
+                        <a href="">
+                            <div class="card">
+                                <img src="media/img/no-image.png" width="200">
+                                <h4>Подушка</h4>
+                            </div>
+                        </a>
+                        <a href="">
+                            <div class="card">
+                                <img src="media/img/no-image.png" width="200">
+                                <h4>Брелок</h4>
+                            </div>
+                        </a>
+                    </div>
                 </div>
                 <div class="botContent">               
                 </div>
