--- a/main.html
+++ b/main.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="carousel.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/carousel.css">
     <link rel="shortcut icon" href="media/img/icons/icon.png" type="image/x-icon">
-    <script src="script.js" defer></script>
+    <script src="js/script.js" defer></script>
     <title>Принт Бюро - Главная</title>
 </head>
 <body>
@@ -38,10 +38,8 @@
         <div class="mainBlock">
             <div class="content">
                 <div class="topContent">
-                    <h1>Главная</h1>
-                </div>
-                <div class="midContent">
-                    <section aria-label="Newest Photos">
+                    <h1>Центр фотоуслуг и полиграфии Принт Бюро</h1>
+                    <section aria-label="Photos">
                         <div class="carousel" data-carousel>
                           <button class="carousel-button prev" data-carousel-button="prev">◄</button>
                           <button class="carousel-button next" data-carousel-button="next">►</button>
@@ -80,8 +78,46 @@
                         </div>
                       </section>
                 </div>
+                <div class="midContent">
+                    <p>Вам нужно сфотографироваться на документы или вы хотели бы устроить постановочную фотосессию? В обоих случаях 
+                        изображения должны выйти качественными, и потому специалисты стремятся работать с профессиональной аппаратурой. 
+                        Центр фотоуслуг и полиграфии Принт-Бюро предлагает свою помощь всем, кто желает запечатлеть тёплые воспоминания или сделать 
+                        тематический фотоконтент. Самой важной задачей для фотографа будет поймать наиболее удачный ракурс клиента, чтобы правильно 
+                        передать цветовую гамму и игру освещения. В стоимость фотосессии могут дополнительно включаться услуги по обработке снимков в фотошопе.
+                        <br><br>
+                        Если вам необходимо выпустить визитки, буклеты, фотокарточки или брошюры небольшим тиражом, то фирма может также предложить услуги оперативной печати. 
+                        Она характеризуется быстротой производства и реалистичностью изображения. Клиенты могут принести финальный вариант заказа на своём устройстве или 
+                        отправить его на электронную почту. Также есть возможность сделать макет с нуля или подредактировать его уже на месте. Сообщите сотруднику центра, 
+                        если ваша продукция будет какого-то особого формата и вам будут нужны дополнительные услуги (упаковка, фальцовка, биговка и т. д.).
+                    </p>
+                </div>
                 <div class="botContent">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia sit nesciunt eos nostrum adipisci repellat omnis soluta illo quibusdam! Nobis exercitationem modi quasi nihil. Accusantium ad consequuntur minima molestias esse.</p>
+                    <div class="productCards">
+                        <a href="">
+                            <div class="card">
+                                <img src="media/img/no-image.png" width="200">
+                                <h4>Lorem ipsum dolor sit</h4>
+                            </div>
+                        </a>
+                        <a href="">
+                            <div class="card">
+                                <img src="media/img/no-image.png" width="200">
+                                <h4>Lorem ipsum dolor sit</h4>
+                            </div>
+                        </a>
+                        <a href="">
+                            <div class="card">
+                                <img src="media/img/no-image.png" width="200">
+                                <h4>Lorem ipsum dolor sit</h4>
+                            </div>
+                        </a>
+                        <a href="">
+                            <div class="card">
+                                <img src="media/img/no-image.png" width="200">
+                                <h4>Lorem ipsum dolor sit</h4>
+                            </div>
+                        </a>
+                    </div>        
                 </div>
             </div>
         </div>
