--- a/login.html
+++ b/login.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="authPage.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/authPage.css">
     <link rel="shortcut icon" href="media/img/icons/icon.png" type="image/x-icon">
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
     <title>Принт Бюро - Вход</title>
 </head>
 <body>
