--- a/contacts.html
+++ b/contacts.html
@@ -20,7 +20,7 @@
                 <ul>
                     <li><a href="main.html">Главная</a></li>
                     <li><a href="index.html">Товары</a></li>
-                    <li><a href="contacts.html">► Контакты ◄</a></li>
+                    <li id="selectedNav"><a href="contacts.html">Контакты</a></li>
                 </ul>
             </div>
             <div class="navMid">
