--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="navLeft">
                 <ul>
                     <li><a href="main.html">Главная</a></li>
-                    <li><a href="index.html">► Товары ◄</a></li>
+                    <li id="selectedNav"><a href="index.html">Товары</a></li>
                     <li><a href="contacts.html">Контакты</a></li>
                 </ul>
             </div>
@@ -44,24 +44,19 @@
                     <h1>Товары</h1>
                 </div>
                 <div class="midContent">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim doloribus libero quos quis labore, eum vel nam maxime aspernatur natus ratione, doloremque laborum. Vel, deserunt esse tempore temporibus voluptas accusamus.</p>
+                    <p>Мы представляем широкий спектр услуг по изготовлению фотосувениров. <br>
+                        Печать фото на кружках, подушках, футболках и толстовках, флагах, брелоках, бейсболках, магнитах, тарелках, пазлах, ёлочных шарах, ковриках для мыши, значках и др.</p>
                     <div class="productCards">
-                        <a href="">
+                        <a href="products-pages/cup-page.html">
                             <div class="card">
-                                <img src="media/img/no-image.png" width="200">
-                                <h4>Кружка</h4>
+                                <img src="media/img/products/cup.png" width="200">
+                                <h4>Кружки</h4>
                             </div>
                         </a>
-                        <a href="">
+                        <a href="products-pages/tshirt-page.html">
                             <div class="card">
-                                <img src="media/img/no-image.png" width="200">
-                                <h4>Футболка</h4>
-                            </div>
-                        </a>
-                        <a href="">
-                            <div class="card">
-                                <img src="media/img/no-image.png" width="200">
-                                <h4>8 марта</h4>
+                                <img src="media/img/products/t-shirt.png" width="200">
+                                <h4>Футболки</h4>
                             </div>
                         </a>
                         <a href="">
@@ -73,73 +68,19 @@
                         <a href="">
                             <div class="card">
                                 <img src="media/img/no-image.png" width="200">
-                                <h4>Металлические бейджи</h4>
+                                <h4>Подушки</h4>
                             </div>
                         </a>
                         <a href="">
                             <div class="card">
                                 <img src="media/img/no-image.png" width="200">
-                                <h4>Печать чертежей</h4>
+                                <h4>Визитки</h4>
                             </div>
                         </a>
                         <a href="">
                             <div class="card">
                                 <img src="media/img/no-image.png" width="200">
-                                <h4>Подушка</h4>
-                            </div>
-                        </a>
-                        <a href="">
-                            <div class="card">
-                                <img src="media/img/no-image.png" width="200">
-                                <h4>Брелок</h4>
-                            </div>
-                        </a>
-                        <a href="">
-                            <div class="card">
-                                <img src="media/img/no-image.png" width="200">
-                                <h4>Кружка</h4>
-                            </div>
-                        </a>
-                        <a href="">
-                            <div class="card">
-                                <img src="media/img/no-image.png" width="200">
-                                <h4>Футболка</h4>
-                            </div>
-                        </a>
-                        <a href="">
-                            <div class="card">
-                                <img src="media/img/no-image.png" width="200">
-                                <h4>8 марта</h4>
-                            </div>
-                        </a>
-                        <a href="">
-                            <div class="card">
-                                <img src="media/img/no-image.png" width="200">
-                                <h4>Тарелки</h4>
-                            </div>
-                        </a>
-                        <a href="">
-                            <div class="card">
-                                <img src="media/img/no-image.png" width="200">
-                                <h4>Металлические бейджи</h4>
-                            </div>
-                        </a>
-                        <a href="">
-                            <div class="card">
-                                <img src="media/img/no-image.png" width="200">
-                                <h4>Печать чертежей</h4>
-                            </div>
-                        </a>
-                        <a href="">
-                            <div class="card">
-                                <img src="media/img/no-image.png" width="200">
-                                <h4>Подушка</h4>
-                            </div>
-                        </a>
-                        <a href="">
-                            <div class="card">
-                                <img src="media/img/no-image.png" width="200">
-                                <h4>Брелок</h4>
+                                <h4>Чехлы</h4>
                             </div>
                         </a>
                     </div>
