--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
         <div class="navPanel">
             <div class="navLeft">
                 <ul>
-                    <li><a href="main.html">► Главная ◄</a></li>
+                    <li id="selectedNav"><a href="main.html">Главная</a></li>
                     <li><a href="index.html">Товары</a></li>
                     <li><a href="contacts.html">Контакты</a></li>
                 </ul>
@@ -92,7 +92,7 @@
                     </p>
                 </div>
                 <div class="botContent">
-                    <div class="productCards">
+                    <!-- <div class="productCards">
                         <a href="">
                             <div class="card">
                                 <img src="media/img/no-image.png" width="200">
@@ -117,7 +117,7 @@
                                 <h4>Lorem ipsum dolor sit</h4>
                             </div>
                         </a>
-                    </div>        
+                    </div>         -->
                 </div>
             </div>
         </div>
