--- a/credit-card-form/index.html
+++ b/credit-card-form/index.html
@@ -11,7 +11,7 @@
 
     <script src="js/jquery.js"></script>
     <script src="js/jquery.maskedinput.min.js"></script>
-    <title>Document</title>
+    <title>Credit card form</title>
 </head>
 <body>
     <div class="bg-div"></div>
