--- a/credit-card-form/index.html
+++ b/credit-card-form/index.html
@@ -14,7 +14,7 @@
     <title>Credit card form</title>
 </head>
 <body>
-    <div class="bg-div"></div>
+    <!-- <div class="bg-div"></div> -->
     <div class="content">
         <div class="main-block">
             <div class="control-panel">
