--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <div class="line"></div>
 
             <div class="links">
-                <a href="https://www.youtube.com/@rad0n_">Youtube</a>
-                <a href="https://steamcommunity.com/id/rad0n101/">Steam</a>
+                <a href="https://www.youtube.com/@rad0n_"><img src="youtube_icon.svg" alt="" width="24"></a>
+                <a href="https://steamcommunity.com/id/rad0n101/"><img src="steam_icon.svg" width="24" alt=""></a>
             </div>
         </div>
     </div>
