--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             </div>
 
             <a href="credit-card-form/index.html">Credit card form</a>
+            <a href="comments-test/index.html">Comments test</a>
             <a href="printbyro/index.html">Принт Бюро</a>
             
             <div class="line"></div>
