--- a/comments-test/index.html
+++ b/comments-test/index.html
@@ -11,7 +11,7 @@
 <body onload="loadComments()">
     <div class="content">
         <div class="enter-comment">
-            <input type="text" class="name" id="name" placeholder="Имя">
+            <input type="text" class="name" id="name" placeholder="Имя" maxlength="50">
             <input type="text" class="comment-body" id="comment-body" placeholder="Комментарий">
 
             <button type="submit" id="send-comment" onclick="send()">Отправить</button>
