--- a/comments-test/index.html
+++ b/comments-test/index.html
@@ -16,7 +16,7 @@
 
             <button type="submit" id="send-comment" onclick="send()">Отправить</button>
         </div>
-        <div id="comment-field"></div>
+        <div id="comment-field" style="display: flex; flex-direction: column-reverse;"></div>
     </div>
 </body>
 </html>
