--- a/index.html
+++ b/index.html
@@ -20,13 +20,12 @@
 
             <a href="credit-card-form/index.html">Credit card form</a>
             <a href="comments-test/index.html">Comments test</a>
-            <!-- <a href="printbyro/index.html">Принт Бюро</a> -->
             
             <div class="line"></div>
 <!--
             <div class="links">
-                <a href="https://www.youtube.com/@rad0n_"><img src="youtube_icon.svg" alt="" width="24"></a>
-                <a href="https://steamcommunity.com/id/rad0n101/"><img src="steam_icon.svg" width="24" alt=""></a>
+                <a href=""><img src="youtube_icon.svg" alt="" width="24"></a>
+                <a href=""><img src="steam_icon.svg" width="24" alt=""></a>
             </div>
 -->
         </div>
